Fix overflowing code snippets.

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,5 +1,6 @@
 .highlight .hll { background-color: #515151 }
 .highlight  { background: $color-dark; color: #cccccc }
+.highlight pre { overflow-x: scroll; }
 .highlight pre code { background: $color-dark; color: #cccccc }
 .highlight .c { color: #999999 } /* Comment */
 .highlight .err { color: #f2777a } /* Error */
